force-app/main/default/objects/PromoAccrual__c/PromoAccrual__c.object-meta.xml
<CustomObject>
    <label>Promo Accrual</label>
    <pluralLabel>Promo Accruals</pluralLabel>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Promo Accrual Name</label>
        <type>AutoNumber</type>
    </nameField>
    <searchStatus>Active</searchStatus>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promo Accruals</relationshipLabel>
        <relationshipName>PromoAccruals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AccruedAmount__c</fullName>
        <label>Accrued Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettledAmount__c</fullName>
        <label>Settled Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>