force-app/main/default/objects/PromoAccrual__c/fields/AccruedAmount__c.field-meta.xml
<CustomField>
    <fullName>AccruedAmount__c</fullName>
    <label>AccruedAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>