force-app/main/default/objects/PromoAccrual__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <required>true</required>
    <type>Date</type>
</CustomField>