force-app/main/default/objects/PromoAccrual__c/fields/SettledAmount__c.field-meta.xml
<CustomField>
    <fullName>SettledAmount__c</fullName>
    <label>SettledAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>